--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,9 @@ p {
     background-size: cover;
     -o-background-size: cover;
 }
+@media(max-width:767px) {
+    #explination, .quote {
+        width: 100%;
+        padding: 20px;
+    }
+}
