--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -135,7 +135,7 @@ a:focus {
 
     .navbar-custom.top-nav-collapse {
         padding: 0;
-        border-bottom: 1px solid rgba(255,255,255,.3);
+        /* border-bottom: 1px solid rgba(255,255,255,.3); */
         background: #25292a;
     }
 }
